--- a/main.css
+++ b/main.css
@@ -65,6 +65,7 @@ table {
 }
 
 body {
+	height:100%;
 	font-family: 'Proxima Nova';
 	
 }
@@ -124,14 +125,13 @@ nav ul li {
 
 #feature_container {
 	width: 940px;
-	height: 450px;
 	position: relative;
 	margin: 50px auto;
 }
 
 #feature_text {
 	z-index: 100;
-	width: 500px;
+	width: 940px;
 	position: absolute;
 	text-align: center;
 	margin: 110px auto;
@@ -139,13 +139,15 @@ nav ul li {
 
 #feature_text img {
 	width: 530px;
-	margin: 0px 205px 0px 205px;
+	margin: 0px auto;
 	position:relative;
 	
 }
 
 #feature_image {
+	width: 940px;
 	position: relative;
+	margin: 0 auto;
 	margin-top: -50px;
 }
 
@@ -193,3 +195,25 @@ nav ul li {
 	text-align: center;
 	padding-right: 10px;
 	}
+	
+footer { 
+	background-color:#f5f5f5;
+	position:relative;
+	bottom: 0;
+	height:44px;
+	width:100%;
+	margin-top:80px;
+	}
+#copyright {
+	float:left;
+}
+
+#footer_nav {
+	float: right;
+}
+
+
+
+
+
+
