--- a/main.css
+++ b/main.css
@@ -148,13 +148,12 @@ nav ul li {
 	width: 940px;
 	position: relative;
 	margin: 0 auto;
-	margin-top: -50px;
 }
 
 #headline {
 	width: 400px;
 	z-index: 100;
-	margin: 10px 270px 0px 270px;
+	margin: 0 auto;
 }
 
 
@@ -191,10 +190,16 @@ nav ul li {
 .img_container {
 	width: 220px;
 	height: 200px;
-	display: inline-block;
+	display: block;
+	float:left;
 	text-align: center;
-	padding-right: 10px;
+	padding-right: 20px;
+	margin-top -50px
 	}
+	
+.img_container:nth-child(4) {
+	padding-right: 0px;
+}
 	
 footer { 
 	background-color:#f5f5f5;
@@ -203,6 +208,7 @@ footer {
 	height:44px;
 	width:100%;
 	margin-top:80px;
+	display: none;
 	}
 #copyright {
 	float:left;
@@ -210,6 +216,7 @@ footer {
 
 #footer_nav {
 	float: right;
+	display: none;
 }
 
 
