--- a/main.css
+++ b/main.css
@@ -67,7 +67,7 @@ table {
 body {
 	height:100%;
 	font-family: 'Proxima Nova';
-	font-color: #404348;
+	olor: #404348;
 	
 }
 #container {
@@ -99,23 +99,32 @@ header {
 			font-weight: 'Regular';
 			letter-spacing: .1em;
 			font-size: 14px;
-			color:#ffffff;
+			color:#787a7f;
 			display: inline-block;
 			padding-left: 15px;
 		}
+header a {
+	color:#a8abb2;
+	text-decoration:none;
+		}
+header a:hover {
+	color: #ffffff;
+}
 	
-img {
+.logo img {
 	display: block;
-	margin: 45px auto 30px auto;
+	margin: 0 auto;
+	padding: 40px;
 }
 
 nav {
 	display: block;
+	width: 940px;
 }
 
 nav ul {
 	text-align: center;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 	
 }
 
@@ -127,14 +136,22 @@ nav ul li {
 	color: ##424348;
 	display: inline-block;
 	padding: 0px 15px 15px 0px;
-	letter-spacing:.2em;
+	letter-spacing:.15em;
 }
 
+nav a {
+	color:#404348;
+	text-decoration:none;
+}
+
+nav a:hover{
+	color:#9fbe00;
+}
 #feature_container {
 	width: 940px;
 	position: relative;
 	margin: 0px auto;
-	margin-top: -40px;
+	margin-top: -30px;
 }
 
 #feature_text {
@@ -155,7 +172,7 @@ nav ul li {
 #feature_image {
 	width: 940px;
 	position: relative;
-	margin: 0 auto;
+	margin: 40px auto;
 }
 
 #headline {
@@ -176,22 +193,32 @@ nav ul li {
 }
 
 #button {
+	margin: 0 auto;
+}
+
+#button a {
 	position: absolute;
 	width: 200px;
 	height:55px;
 	background: #9fbe00;
-	margin: 50px 364px;
-}
-
-#button p {
 	color: #ffffff;
+	text-decoration:none;
 	font-family: 'Proxima Nova';
-	font-weight: 'Bold';
+	font-weight: Bold;
 	font-size:12px;
 	letter-spacing:.1em;
 	text-align: center;
 	margin: 20px;
 	text-transform: uppercase;
+	line-height:55px;
+	margin: 0 auto;
+	
+}
+
+#button a:hover{
+	background: #89a400;
+	color: #ffffff;
+	text-decoration:none;
 	
 }
 
@@ -201,16 +228,16 @@ nav ul li {
 
 	.img_container {
 		width: 220px;
-		height: 200px;
+		height: 220px;
 		display: block;
 		float:left;
 		text-align: center;
 		padding-right: 20px;
-		margin- -50px
+		margin-top: 30px;
 		}
 	
 		.img_container p {
-			margin: -10px;
+			margin: 20px;
 			text-transform: uppercase;
 			font-size: 12px;
 			font-weight: bold;
@@ -225,24 +252,23 @@ nav ul li {
 	position: relative;
 	display:block;
 	width: 940px;
-	margin: 0 auto;
 	text-align: center;
-}
+	}
 
 hr {
-  background: #ddd; 
-  clear: both; 
-  float: none; 
-  width: 100%; 
-  height: 1px;
-  border: none; 
+  	background: #ddd; 
+  	clear: both; 
+  	float: none; 
+  	width: 100%; 
+  	height: 1px;
+  	border: none;
 }
 
 .blog_text {
 	background:#f1f5f6;
 	width:300px;
 	height:60px;
-	margin-top: -30px;
+	margin-top: 0px;
 	
 }
 
@@ -279,21 +305,28 @@ hr {
 		letter-spacing:.1em;
 	}
 footer { 
-	background-color:#f5f5f5;
-	position:relative;
-	bottom: 0;
+	clear: both;
 	height:44px;
-	width:100%;
-	margin-top:80px;
-	display: none;
+	height: 50px;
+	padding-bottom:10px;
 	}
 #copyright {
+	margin-top:80px;
+	margin-bottom:10px;
 	float:left;
 }
 
 #footer_nav {
+	margin-top:80px;
 	float: right;
 }
+
+p {
+	font-size: 10px;
+	font-color:#d6d6d6;
+}
+
+
 
 
 
