--- a/main.css
+++ b/main.css
@@ -67,7 +67,7 @@ table {
 body {
 	height:100%;
 	font-family: 'Proxima Nova';
-	olor: #404348;
+	color: #404348;
 	
 }
 #container {
@@ -193,10 +193,12 @@ nav a:hover{
 }
 
 #button {
-	margin: 0 auto;
+	z-index:100;
+	margin: 100px auto;
 }
 
 #button a {
+	z-index:100;
 	position: absolute;
 	width: 200px;
 	height:55px;
