--- a/main.css
+++ b/main.css
@@ -192,7 +192,7 @@ nav a:hover{
 
 
 #headline p {
-	font-family: 'Proxima Nova';
+	font-family: 'Proxima Nova';s
 	font-size: 15px;
 	color: #ffffff;
 	text-align: center;
